# mlmisc

./: LICENSE  README.md  pyproject.toml  setup.py
mlmisc/: args_base.py  args_parallel.py  args_sequential.py  attention.py  auto_module.py  config.py  conv2d_mixer.py  conv_linear.py  conv_utils.py  core_utils.py  cross_linear.py  data_loader.py  dataset_adapters.py  dataset_base.py  dataset_utils.py  debug_utils.py  einops_layers.py  encoder_block.py  ensemble.py  fork_attention.py  image_pad_concat.py  image_urls_dataset.py  lambda.py  layer_utils.py  layers.py  linear_conv.py  lm_projection.py  lm_utils.py  load_state_dict.py  loss_wrappers.py  model_wrappers.py  module_builder.py  moe.py  mosaic.py  net_base.py  nets_dict.py  next_sequence_dataset.py  next_token_dataset.py  nn_lambda.py  patcher.py  (+22 more)
mlmisc/lrsched/: reduce_on_plateau.py  wrapper.py
mlmisc/models/sequence/: attention_stack.py  cross_seq.py  embedding_trainer.py  encoder_stack.py  sequence_base.py  shard_seq.py
mlmisc/models/vision/: cnnensemble.py  conv_vit.py  covit.py  cross_viz_seq.py  encdec.py  fork_viz_seq.py  patcher_vit.py  vit_base.py  vito.py
mlmisc/rl/: actions.py  env.py  main_utils.py  memory.py  nets.py  param_updater.py  train_context.py  train_runner.py  utils.py
